--- a/package.json
+++ b/package.json
@@ -151,6 +151,12 @@
             "markdownDescription": "The maximum depth we should scan.",
             "type": "integer",
             "default": 15
+          },
+          "noteOrganizer.scanConcurrency": {
+            "title": "Scan max concurrency",
+            "markdownDescription": "The maximum concurrency while scanning for notes.",
+            "type": "integer",
+            "default": 20
           }
         }
       }
@@ -176,5 +182,8 @@
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "p-limit": "^3.1.0"
   }
 }
