--- a/package.json
+++ b/package.json
@@ -100,6 +100,12 @@
         "title": "Create new note",
         "category": "Note Organizer",
         "icon": "$(new-file)"
+      },
+      {
+        "command": "noteOrganizer.newNoteToWorkspace",
+        "title": "Create new note to this workspace folder",
+        "category": "Note Organizer",
+        "icon": "$(new-file)"
       }
     ],
     "views": {
