Fix #20: import all projects on scan (#22)
* Contrib #20: import all of the projects on scanning

* Contrib #20: add hide/show empty project toggle

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "note-organizer",
   "displayName": "Note Organizer",
   "description": "Organize your Markdown and text file notes across all of your project, in a single place.",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -53,7 +53,13 @@
         "icon": "$(folder-opened)"
       },
       {
-        "command": "noteOrganizer.scanFolderForNotes",
+        "command": "noteOrganizer.toggleShowEmptyProjects",
+        "title": "Toggle show empty projects",
+        "category": "Note Organizer",
+        "icon": "$(eye)"
+      },
+      {
+        "command": "noteOrganizer.scanFolderForNotesAndProject",
         "title": "Scan folder for notes and projects to import",
         "category": "Note Organizer",
         "shortTitle": "Scan folder",
@@ -135,6 +141,11 @@
           "when": "view == noteOrganizer"
         },
         {
+          "command": "noteOrganizer.toggleShowEmptyProjects",
+          "group": "navigation",
+          "when": "view == noteOrganizer"
+        },
+        {
           "command": "noteOrganizer.importNoteToProject",
           "group": "navigation",
           "when": "view == noteOrganizer"
@@ -149,7 +160,7 @@
           "when": "view == noteOrganizer"
         },
         {
-          "command": "noteOrganizer.scanFolderForNotes",
+          "command": "noteOrganizer.scanFolderForNotesAndProject",
           "when": "view == noteOrganizer"
         },
         {
